--- a/src/assets/scss/components/_banner.scss
+++ b/src/assets/scss/components/_banner.scss
@@ -1,5 +1,6 @@
 .banner {
-    background-image: url(`../../../../../../public/images/banner-bg.png);
+    // background-image: url(`../../../../../../public/images/banner-bg.png);
+    background-image: url('../../images/banner-bg.png');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
