--- a/src/assets/scss/components/_semena.scss
+++ b/src/assets/scss/components/_semena.scss
@@ -4,21 +4,47 @@
     background-size: cover;
     background-repeat: no-repeat;
     .semena-wrapper{
-        height: 500px;
+        // height: 500px;
         @include flex;
         flex-direction: column;
         align-items: start;
         justify-content: center;
         color: #fff;
         padding: 100px 150px;
+        @include devices(md){
+            padding: 80px 130px;
+        }
+        @include devices (mmd){
+            padding: 60px 100px;
+        }
+        @include devices(sm){
+            padding: 40px 80px;
+        }
+        @include devices(xs){
+            padding: 20px 50px;
+        }
+        @include devices(xxs){
+            padding: 15px 25px;
+        }
         h2{
             margin-left: 50px;
             font-size: 45px;
             font-weight: bold;
+            @include devices(md){
+                font-size: 40px;
+            }
+            @include devices (mmd){
+                font-size: 35px;
+            }
+            @include devices(sm){
+                font-size: 30px;
+                margin-left: 30px;
+                font-weight: 600;
+            }
+           
             
         }
         p{
-            
             font-size: 16px;
             font-weight: 400;
             margin-top: 10px;
