--- a/src/assets/scss/pages/_contact.scss
+++ b/src/assets/scss/pages/_contact.scss
@@ -7,6 +7,21 @@
     margin: 50px auto 0px auto;
     max-width: 1100px;
     width: 100%;
+    @include devices(md) {
+      margin: 40px auto 0px auto;
+    }
+    @include devices(sm) {
+      margin: 30px auto 0px auto;
+    }
+    @include devices(xs) {
+      margin: 30px auto 0px auto;
+    }
+    @include devices(xxs) {
+      margin: 25px auto 0px auto;
+    }
+    @include devices(xssz1){
+      margin: 15px auto 0px auto;
+    }
     p {
       @include flex;
       justify-content: center;
@@ -18,6 +33,12 @@
         font-weight: 600;
         padding-left: 5px;
       }
+      @include devices(xssz) {
+        font-size: 16px;
+      }
+      @include devices(xxs) {
+        font-size: 14px;
+      }
     }
     h2 {
       @include flex;
@@ -25,9 +46,19 @@
       font-size: 45px;
       font-weight: bold;
       color: #000;
+      @include devices(md) {
+        font-size: 40px;
+      }
+      @include devices(xxs) {
+        font-size: 30px;
+        font-weight: 600;
+      }
     }
     .contact-contend {
       margin-top: 30px;
+      @include devices(ssm) {
+        margin-top: 15px;
+      }
       &-top ul {
         padding: 40px 30px;
         border: 1px solid #fff;
@@ -37,6 +68,13 @@
         @include flex;
         gap: 20px;
         justify-content: space-between;
+        @include devices(ssm) {
+          padding: 20px 10px;
+        }
+        @include devices(xs) {
+          flex-direction: column;
+          align-items: start;
+        }
         li {
           @include flex;
           gap: 10px;
@@ -54,38 +92,62 @@
         border-radius: 0px 0px 20px 20px;
         box-shadow: 1px 1px 5px 5px #dfdbdb;
         margin-top: 1px;
-        padding:40px 30px ;
+        padding: 40px 30px;
         background: #fff;
-        h3{
-            @include flex;
-            justify-content: start;
-            font-size: 18px;
-            font-weight: bold;
-            color: #0078E7;
+        @include devices(ssm) {
+          padding: 20px 10px;
         }
-        p{
-            margin-top: 5px;
-            font-size: 16px;
-            color: #000;
-            font-weight: 400;
-            max-width: 820px;
+        h3 {
+          @include flex;
+          justify-content: start;
+          font-size: 18px;
+          font-weight: bold;
+          color: #0078e7;
         }
-        ul{
-            margin-top: 20px;
+        p {
+          margin-top: 5px;
+          font-size: 16px;
+          color: #000;
+          font-weight: 400;
+          max-width: 820px;
+        }
+        ul {
+          margin-top: 20px;
+          @include flex;
+          justify-content: space-between;
+          @include devices(xs) {
+            flex-direction: column;
+            align-items: start;
+          }
+          li {
             @include flex;
-            justify-content: space-between;
-            li{
-                @include flex;
-                gap: 10px;
-                p{
-                    margin-top: 0px;
-                }
+            gap: 10px;
+            p {
+              margin-top: 0px;
             }
+          }
         }
       }
     }
-    .map-img{
-        padding: 50px 0px;
+    .map-img {
+      padding: 50px 0px;
+      text-align: center;
+      @include devices(md) {
+        padding: 40px 0px;
+      }
+      @include devices(sm) {
+        padding: 30px 0px;
+      }
+      @include devices(xs) {
+        padding: 20px 0px;
+      }
+      @include devices(xssz) {
+        padding: 10px 0px;
+      }
+      img {
+        max-width: 1100px;
+        width: 100%;
+      }
     }
   }
 }
