--- a/src/assets/scss/pages/_katalog.scss
+++ b/src/assets/scss/pages/_katalog.scss
@@ -5,6 +5,15 @@
   background-color: #f8f8f8;
   &-wrapper {
     padding: 30px 80px;
+    @include devices(xxs){
+      padding: 20px 50px;
+    }
+    @include devices(xssz){
+      padding: 15px 30px;
+    }
+    @include devices(xxs){
+      padding: 10px 15px;
+    }
     .title {
       @include flex;
       flex-direction: column;
@@ -15,12 +24,26 @@
         span {
           color: #000;
         }
+        @include devices(xssz){
+          font-size: 16px;
+        }
+        @include devices(xxs){
+          font-size: 14px;
+        }
       }
       h2 {
         color: #000;
         font-size: 45px;
         font-weight: bold;
+        @include devices(md){
+          font-size: 40px;
+        }
+        @include devices(xxs){
+          font-size: 30px;
+          font-weight: 600;
+        }
       }
+      
     }
     .cards{
         @include flex;
@@ -29,10 +52,43 @@
         gap: 50px;
         // background-color: red;
         padding: 50px 0px;
+        @include devices(lg){
+          gap: 40px;
+          padding: 40px 0px;
+         }
+         @include devices(llg){
+          gap: 30px;
+          padding: 30px 0px;
+         }
+         @include devices(md){
+          gap: 20px;
+          padding: 20px 0px;
+         }
+         @include devices(mmd){
+          gap: 10px;
+          padding: 10px 0px;
+         }
         .card{
             position: relative;
             max-width: 580px;
            @include flex;
+           @include devices(lg){
+            max-width: 480px
+           }
+           @include devices(llg){
+            max-width: 400px
+           }
+           @include devices(md){
+            max-width: 350px;
+           }
+           @include devices(mmd){
+            max-width: 280px
+           }
+           @include devices(sm){
+            max-width: 500px;
+            
+            margin: 0px auto;
+           }
             img{
                 @include image;
                 max-width: 570px;
@@ -47,6 +103,12 @@
                     font-size: 30px;
                     font-weight: 600;
                     color: #000;
+                    @include devices(llg){
+                      font-size: 25px;
+                    }
+                    @include devices(xxs){
+                      font-size: 20px;
+                    }
                 }
                 p{
                     font-size: 20px;
