--- a/src/assets/scss/pages/_about.scss
+++ b/src/assets/scss/pages/_about.scss
@@ -55,6 +55,10 @@
             @include flex;
             justify-content: center;
             margin-top: 30px;
+            img {
+                max-width: 1100px;
+                width: 100%;
+              }
         }
          
     }
